examples/test/testpolicy3771.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3771
  namespace: namespace53
spec:
  podSelector:
    matchLabels:
      key0: value34
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value42
          key34: value6
          key49: value19
      podSelector:
        matchLabels:
          key25: value8
